# cmc-ctm-nla-methods

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ci_script.sh  note.txt
.github/: main.yaml
.github/workflows/: main.yaml
basic_la/: CMakeLists.txt  common.h  common_container.cpp  common_container.h  common_matrix.cpp  common_matrix.h  helpers.h  matrix  matrix.h  matrix_powers_mv.cpp  matrix_powers_mv.h  sparse_matrix.cpp  sparse_matrix.h  square_matrix.cpp  square_matrix.h  vector.h
conjugate_gradient/: CMakeLists.txt  README.md  conjugate_gradient.cpp  conjugate_gradient.h  run.cpp  test.cpp
conjugate_gradient_omp/: CMakeLists.txt  README.md  conjugate_gradient_omp.cpp  conjugate_gradient_omp.h  run.cpp  test.cpp
conjugate_gradient_parallel/: CMakeLists.txt  README.md  conjugate_gradient_parallel.cpp  conjugate_gradient_parallel.h  run.cpp  test.cpp
coursework_report/: bench_matrix_powers_kernel  bench_matrix_powers_kernel.md  gmres_MPI.cpp  main.tex  presentation.key
deprecated/basic_la/: CMakeLists.txt  helpers.h  matrix.cpp  matrix.h  vector.cpp  vector.h
deprecated/conjugate_gradient/: Makefile  bench_results.txt  cmake_install.cmake  conjugate_gradient.cpp  conjugate_gradient.h  test.cpp
deprecated/qr_decomposition/: qr_decomposition.cpp  qr_decomposition.h  run.cpp  test.cpp
deprecated/tools/cmake/: Protobuf.cmake
matrix_examples/sparse_spd/: 1024  128  16  2048  256  32  4  512  64  8  gen.py
matrix_powers_mv/: CMakeLists.txt  matrix_powers_mv.cpp  matrix_powers_mv.h  run.cpp  test.cpp
qr_decomposition/: CMakeLists.txt  qr_decomposition.cpp  qr_decomposition.h  run.cpp  test.cpp
tools/: catch_main.cpp
tools/cmake/: BuildFlags.cmake  FindCatch.cmake  TestSolution.cmake
tools/commons/: run_channel.h  runner.h  test_channel.h  util.h
