add_catch(test_matrix_powers_mv test.cpp)
target_include_directories(test_matrix_powers_mv PRIVATE ${BASIC_LA_PATH})
target_link_libraries(test_matrix_powers_mv PRIVATE BASIC_LA)

add_catch(bench_matrix_powers_mv run.cpp)
target_include_directories(bench_matrix_powers_mv PRIVATE ${BASIC_LA_PATH})
target_link_libraries(bench_matrix_powers_mv PRIVATE BASIC_LA)